--- a/CartesDeVisites.html
+++ b/CartesDeVisites.html
@@ -19,41 +19,41 @@
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
   <body classe="container align-items-center" style="font-family:Open Sans;">
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="col-2"><img src="img/logo@2x.png"></div>
-        <div class="container-fluid col-4">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-mdb-toggle="collapse"
-            data-mdb-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fas fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              <a class="nav-link" href="Service.html">Services</a>
-              <a class="nav-link" href="#">Nous contacter</a>
-              <a class="nav-link" href="pageAdmin.html">Admin</a>
-              <a class="nav-link" href="pageCommande.html">Commande</a>
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
-              >
+    <header class="col-12">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="col-1"></div>
+          <div class="col-2"><img src="img/logocpnvpng.png"></div>
+          <div class="container-fluid col-6">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-mdb-toggle="collapse"
+              data-mdb-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav d-flex justify-content-between">
+                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="Service.html">Services</a>
+                <a class="nav-link" href="pageAdmin.html">Admin</a>
+                <a class="nav-link" href="pageCommande.html">Commande</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-1"><img src="img/Groupe 9.png"></div>
-      </nav>
-
-    </header>
+          <div class="col-1" id="logo"><img src="img/Icon metro-profile.svg"></div>
+        </nav>
+  
+      </header>
     <main style="padding-bottom:6vw;">
     <div
       class="col-12 container">
-      <h1 class=" display-3" style="color:#01A659; font-weight: 500;">Cartes de visites</h1>
+      <h1 class=" display-3" style="color:#01A659; font-weight: 500; padding-top:2em;">Cartes de visites</h1>
   </div>
   <div class="col-12 container">
     <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
