--- a/pageAdmin.html
+++ b/pageAdmin.html
@@ -37,11 +37,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav d-flex justify-content-between">
-              <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="#">Services</a>
-              <a class="nav-link" href="#">Nous contacter</a>
-              <a class="nav-link" href="#">Admin</a>
-              <a class="nav-link" href="#">Commande</a>
+              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="Service.html">Services</a>
+              <a class="nav-link" href="pageAdmin.html">Admin</a>
+              <a class="nav-link" href="pageCommande.html">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
               >
             </div>
