--- a/pageCommande.html
+++ b/pageCommande.html
@@ -19,10 +19,11 @@
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
   <body classe="container align-items-center" style="font-family:Open Sans;">
-    <header>
+    <header class="col-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="col-2"><img src="img/logo@2x.png"></div>
-        <div class="container-fluid col-4">
+        <div class="col-1"></div>
+        <div class="col-2"><img src="img/logocpnvpng.png"></div>
+        <div class="container-fluid col-6">
           <button
             class="navbar-toggler"
             type="button"
@@ -35,10 +36,9 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <div class="navbar-nav d-flex justify-content-between">
+              <a class="nav-link active" href="index.html">Home</a>
               <a class="nav-link" href="Service.html">Services</a>
-              <a class="nav-link" href="#">Nous contacter</a>
               <a class="nav-link" href="pageAdmin.html">Admin</a>
               <a class="nav-link" href="pageCommande.html">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <div class="col-1"><img src="img/Groupe 9.png"></div>
+        <div class="col-1" id="logo"><img src="img/Icon metro-profile.svg"></div>
       </nav>
 
     </header>
